# Weather_forecasting

./: .replit  pyproject.toml  replit.md  requirements.txt
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/climate-risk/: app.py
artifacts/climate-risk/.replit-artifact/: artifact.edit.toml
artifacts/climate-risk/utils/: cyclone.py  elevation.py  emdat.py  flood.py  geocoder.py  nasa_power.py  openmeteo.py  risk_engine.py
attached_assets/: Pasted-Data-Source-Integration-Specifications-The-application-_1782162498825.txt
